--- a/css/header.scss
+++ b/css/header.scss
@@ -1,34 +1,44 @@
 body {
   &.single-post {
     header {
-      .container {
-        > div {
-          @apply pb-12 border-b border-solid border-neutral-5;
-        }
+      .main-logo {
+        background-image: url('images/svg/global66-logo.svg');
+      }
+
+      .border-posts {
+        @apply pb-12 border-b border-solid border-neutral-5;
       }
     }
   }
 }
 
-.main-menu, .main-account {
-  @apply flex flex-row items-center space-x-5;
+header {
+  .main-logo {
+    background-image: url('images/svg/global66-logo_white.svg');
+    text-indent: -9999px;
+    @apply w-40 h-10 block bg-no-repeat bg-center bg-contain;
+  }
 
-  li {
-    &.signup {
-      a {
-        @apply block font-semibold text-neutral-12 bg-neutral-3 px-5 py-2 rounded-lg;
+  .main-menu, .main-account {
+    @apply flex flex-row items-center space-x-5;
 
-        &:hover {
-          @apply text-neutral-12 bg-neutral-4;
+    li {
+      &.signup {
+        a {
+          @apply block font-semibold text-neutral-12 bg-neutral-3 px-5 py-2 rounded-lg;
+
+          &:hover {
+            @apply text-neutral-12 bg-neutral-4;
+          }
         }
       }
-    }
 
-    a {
-      @apply font-semibold text-neutral-5 uppercase transition-all duration-200 ease-in-out;
+      a {
+        @apply font-semibold text-neutral-5 uppercase transition-all duration-200 ease-in-out;
 
-      &:hover {
-        @apply text-neutral-7;
+        &:hover {
+          @apply text-neutral-7;
+        }
       }
     }
   }
